--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://mogu-mysql.cahtqxbh2c1y.ap-northeast-2.rds.amazonaws.com:3306/mogu_dummy?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://mogu-mysql.cahtqxbh2c1y.ap-northeast-2.rds.amazonaws.com:3306/mogu?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: mogu
     password: ENC(zwqa2XpuTC4F0IXSX+yWvskk5yj5fxZ7)
   mvc:
